# munta

./: .gitignore  .hgignore  .travis.yml  Approx_Beta.thy  Asm_Clocks_State_Networks.thy  Bisimilarity_Abstraction.thy  Closure.thy  DBM.thy  DBM_Basics.thy  DBM_Constraint_Systems.thy  DBM_Normalization.thy  DBM_Operations.thy  DBM_Operations_Impl.thy  DBM_Operations_Impl_Refine.thy  DBM_Zone_Semantics.thy  Deadlock.thy  Deadlock_Checking.thy  Deadlock_Impl.thy  Export_Checker.thy  FW_Code.thy  FW_More.thy  Floyd_Warshall.thy  Heap_Hash_Map.thy  Infinite_TA_Runs.thy  LICENSE  Misc.thy  Networks.thy  Networks_Impl.thy  Networks_Impl_Refine.thy  Normalized_Zone_Semantics.thy  Normalized_Zone_Semantics_Certification.thy  Normalized_Zone_Semantics_Certification_Impl.thy  Normalized_Zone_Semantics_Impl.thy  Normalized_Zone_Semantics_Impl_Extra.thy  Normalized_Zone_Semantics_Impl_Refine.thy  Normalized_Zone_Semantics_Impl_Semantic_Refinement.thy  Paths_Cycles.thy  README.md  ROOT  Reachability_Benchmarks.thy  (+35 more)
Certificate_Checking/: Extract_Certificate.thy  Simple_Network_Language_Certificate.thy  Simple_Network_Language_Certificate_Checking.thy  Simple_Network_Language_Certificate_Code.thy
Certification/: Graph_Library_Adaptor.thy  Lasso_Freeness_Certificates_Complete.thy  More_Graph_Theory.thy  Normalized_Zone_Semantics_Certification.thy  Normalized_Zone_Semantics_Certification_Impl.thy  Normalized_Zone_Semantics_Certification_Impl2.thy  Simulation_Graphs2.thy  (+8 more)
OCaml/: dune  dune-project  munta.opam
OCaml/lib/: JANI_Model_Checker.ml  MC.ml  dune
OCaml/test/: dune
(+273 files in other folders)
